src/libs/triggerHandler/objects/DCM_TriggerHandler__mdt/DCM_TriggerHandler__mdt.object-meta.xml
<CustomObject>
    <description>Configure which apex classes should be run in trigger to process records.
Apex classes should be public and implement TriggerHandler.Logic or TriggerHandler.AsyncLogic  interface.</description>
    <label>DR Trigger Handler</label>
    <pluralLabel>DR Trigger Handlers</pluralLabel>
</CustomObject>