src/libs/triggerHandler/objects/DCM_TriggerHandler__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <inlineHelpText>Name of public Apex Class that implements TriggerHandler.Logic or TriggerHandler.AsyncLogic interface</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>