src/libs/triggerHandler/objects/DCM_TriggerHandler__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Provide a detailed information about a trigger handler instances. What exactly the trigger handler does?</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>