src/libs/triggerHandler/objects/DCM_TriggerHandler__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates whether a trigger handler is active or not.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>