src/libs/triggerHandler/objects/DCM_TriggerHandler__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>Order of the trigger handler execution. May be left blank if irrelevant.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>