src/libs/triggerHandler/objects/DCM_TriggerHandler__mdt/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <inlineHelpText>Provides a generic capability to parameterize a trigger handler instance. It is possible to enter any string value.</inlineHelpText>
    <label>Parameters</label>
    <type>TextArea</type>
</CustomField>